src/ui/features/plan_review/render/snapshots/terraleph__ui__features__plan_review__render__tests__apply_confirmation_help_40x16.snap
---
source: src/ui/features/plan_review/render/tests.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default
C┌Apply help──────────────────────────┐
-│ Navigation                       ▲ │
 │ ↑ / ↓ / PgUp / PgDn scroll confi ┃ │
─│ ← / →               move in conf ┃ │─
 │ Home / End          move to inpu ┃ │▲
 │                                  ┃ │┃
 │ Input                            ┃ ││
 │ Type                enter the co │ ││
 │ Backspace           delete befor │ ││
 │                                  │ ││
 │ Context                          ▼ ││
◀︎│ ◀︎════════════════════──────────▶︎   │▶︎
─│ ←/→ scroll | ?/Esc close           │─
s└────────────────────────────────────┘
? help | q quit                    L3/43
