src/ui/features/plan_review/render/snapshots/terraleph__ui__features__plan_review__render__tests__apply_confirmation_help_40x16_bottom.snap
---
source: src/ui/features/plan_review/render/tests.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default
C┌Apply help──────────────────────────┐
-│ Input                            ▲ │
 │ Type                enter the co │ │
─│ Backspace           delete befor │ │─
 │                                  │ │▲
 │ Context                          ┃ │┃
 │ Tab                 show executi ┃ ││
 │                                  ┃ ││
 │ Apply                            ┃ ││
 │ Enter               confirm appl ┃ ││
 │ Esc                 return to pl ▼ ││
◀︎│ ◀︎════════════════════──────────▶︎   │▶︎
─│ ←/→ scroll | ?/Esc close           │─
s└────────────────────────────────────┘
? help | q quit                    L3/43
