src/ui/features/plan_review/render/snapshots/terraleph__ui__features__plan_review__render__tests__apply_confirmation_help_40x24.snap
---
source: src/ui/features/plan_review/render/tests.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default
Cmain [PROD]  ws:de...s/production/main
-┌Apply help──────────────────────────┐
 │ Navigation                         │
─│ ↑ / ↓ / PgUp / PgDn scroll confi   │─
 │ ← / →               move in conf   │▲
 │ Home / End          move to inpu   │┃
 │                                    │┃
 │ Input                              │┃
 │ Type                enter the co   │┃
 │ Backspace           delete befor   │┃
 │                                    ││
 │ Context                            ││
-│ Tab                 show executi   ││
 │                                    ││
 │ Apply                              ││
 │ Enter               confirm appl   ││
 │ Esc                 return to pl   ││
 │ ◀︎════════════════════──────────▶︎   ││
 │ ←/→ scroll | ?/Esc close           ││
◀︎└────────────────────────────────────┘▶︎
─└────────────────────────────────────┘─
sEnter apply | Esc back | ? help
? help | q quit                    L3/43
