src/ui/features/plan_review/render/snapshots/terraleph__ui__features__plan_review__render__tests__apply_confirmation_help_80x24.snap
---
source: src/ui/features/plan_review/render/tests.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default Tool: terraform 1.9.0 Dir: ./envir...main
Cmain [PROD]  ws:default  terraform 1.9.0  ./environments/production/main

─┌───────────┌Apply help─────────────────────────────────────────┐────────────┐─
 │           │ Navigation                                        │            │▲
 │ Apply this│ ↑ / ↓ / PgUp / PgDn scroll confirmation           │            │┃
 │ ! Warning:│ ← / →               move in confirmation input    │on.         │┃
 │           │ Home / End          move to input start or end    │            │┃
 │ Target: ma│                                                   │            │┃
 │ Workspace:│ Input                                             │            │┃
 │ Directory:│ Type                enter the confirmation text   │            │┃
 │ Tool: terr│ Backspace           delete before the cursor      │            │┃
-│ Plan: +1 a│                                                   │            ││
 │           │ Context                                           │            ││
 │ Destroy:  │ Tab                 show execution context        │            ││
 │   terrafor│                                                   │            ││
 │ Replace:  │ Apply                                             │            ││
 │           │ Enter               confirm apply                 │            ││
 │ To confirm│ Esc                 return to plan review         │            ││
 │ > |       │ ?/Esc close                                       │            ││
 │           └───────────────────────────────────────────────────┘            ││
◀︎└────────────────────────────────────────────────────────────────────────────┘▶︎
─Enter apply | Esc back | ? help────────────────────────────────────────────────
s overview | / filter | a apply | ? help | q quit                      Line 3/43
