src/ui/features/plan_review/render/snapshots/terraleph__ui__features__plan_review__render__tests__preview_120x40_apply-confirmation.snap
---
source: src/ui/features/plan_review/render/tests.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default Tool: terraform loading... Dir: /repo/environments/production/main
Changes  +1 add  ~1 update  1 replace  -1 destroy

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 main [PROD]  ws:default  terraform loading...  /repo/environments/production/main                                     ▲
  ~ resource "terraform_data" "api" {                                                                                  ┃
      id       = "api-20260920"                                                                                        ┃
      ~ input  = "before" -> "after"                                                                                   ┃
      # (4 unchanged attributes hidden)                                                                                ┃
    }                                                                                                                  ┃
                    ┌──────────────────────────────────────────────────────────────────────────────┐                   ┃
  # terraform_data.w│                                                                              │                   ┃
-/+ resource "terraf│ Apply this reviewed plan?                                                    │                   ┃
      ~ input = "wor│ ! Warning: this plan destroys or replaces resources in production.           │                   ┃
      - old_checksum│                                                                              │                   ┃
      + new_checksum│ Target: main [PROD]                                                          │                   ┃
    }               │ Workspace: default                                                           │                   ┃
                    │ Directory: /repo/environments/production/main                                │                   ┃
  # terraform_data.o│ Tool: terraform loading...                                                   │                   ┃
  - resource "terraf│ Planned: 12m ago                                                             │                   ┃
      id = "old-2026│ Plan: +1 add  ~1 update  1 replace  -1 destroy                               │                   ┃
    }               │                                                                              │                   ┃
                    │ Destroy:                                                                     │                   ┃
  # terraform_data.n│   terraform_data.old                                                         │                   ┃
  + resource "terraf│ Replace:                                                                     │                   ┃
      input = "new-v│   terraform_data.worker                                                      │                   ┃
      note  = "A del│                                                                              │                   ┃
    }               │ To confirm, type "main" below.                                               │                   ┃
                    │ > |                                                                          │                   ┃
Changes to Outputs: │                                                                              │                   ┃
  + endpoint = (know└──────────────────────────────────────────────────────────────────────────────┘                   ┃
  ~ summary  = "old Enter apply | Esc back | ? help deliberately long value for review"                                ┃
                                                                                                                       │
Warning: Value for "pending" is not known until apply                                                                  │
                                                                                                                       │
Plan: 2 to add, 1 to change, 2 to destroy.                                                                             │
                                                                                                                       │
Synthetic review text continues below so the viewport and scrollbar remain meaningful.                                 ▼
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
s overview | / filter | a apply | ? help | q quit                                                              Line 3/43
